Cambios finales postre

--- a/index.html
+++ b/index.html
@@ -22,8 +22,8 @@
     </li>
 
     <li>
-      <a href="postre.html">Postre: Yogur natural con frutas</a><br>
-      <img src="img/postre.jpg" alt="Imagen del postre" height="100">
+      <a href="postre.html">Postre: Yogur con frutas</a><br>
+      <img src="img/resultado_final_postre.jpg" alt="Imagen del postre" height="100">
     </li>
   </ul>
 
