--- a/postre.html
+++ b/postre.html
@@ -8,7 +8,9 @@
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css">
 </head>
 <body>
+
   <a href="index.html"><i class="fa-solid fa-arrow-left"></i> Volver a la página principal</a>
+
   <h1>Yogur natural con frutas</h1>
 
   <h2>Índice</h2>
@@ -21,20 +23,34 @@
 
   <h2 id="ingredientes">Ingredientes</h2>
   <ul>
-    <li>1 yogur natural</li>
-    <li>2 plátano</li>
-    <li>5 fresas</li>
+    <li>1 yogur natural <img src="img/yogur.jpg" width="90" alt="Yogur natural"></li>
+    <li>1 plátano <img src="img/platano.jpg" width="90" alt="Plátano"></li>
+    <li>5 fresas <img src="img/fresa.jpg" width="90" alt="Fresas"></li>
   </ul>
   <hr>
 
   <h2 id="pasos">Paso a paso</h2>
   <ol>
-    <li>Corta la fruta en trozos pequeños. <img src="img/yogur1.jpg" width="200"></li>
-    <li>Coloca el <b>yogur natural</b> en un bol o vaso. <img src="img/yogur2.jpg" width="200"></li>
-    <li>Añade encima la <b>fruta troceada</b>. <img src="img/yogur3.jpg" width="200"></li>
+    <li>
+      Añade el yogur en un vaso o bol.<br>
+      <img src="img/paso1postre.jpg" width="220" alt="Yogur en vaso">
+    </li>
+    <li>
+      Corta la fruta en trozos pequeños.<br>
+      <img src="img/paso2.1postre.jpg" width="220" alt="Cortando plátano">
+      <img src="img/paso2.2postre.jpg" width="220" alt="Cortando fresas">
+    </li>
+    <li>
+      Añade la fruta cortada sobre el yogur.<br>
+      <img src="img/paso3postre.jpg" width="220" alt="Fruta sobre el yogur">
+    </li>
   </ol>
   <hr>
 
   <h2 id="resultado">Resultado final</h2>
-  <img src="img/yogur-final.jpg" width="500" alt="Resultado final del yogur con frutas">
-  <p><a href="#
+  <img src="img/resultado_final_postre.jpg" width="500" alt="Resultado final del yogur con frutas">
+
+  <p><a href="#ingredientes">Volver arriba</a></p>
+
+</body>
+</html>
