--- a/primer-plato.html
+++ b/primer-plato.html
@@ -2,11 +2,12 @@
 <html lang="es">
 <head>
   <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Ensalada sencilla</title>
   <link rel="icon" type="image/x-icon" href="favicon.ico">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css">
 </head>
-<body>
+<body id="top">
 
   <a href="index.html"><i class="fa-solid fa-arrow-left"></i> Volver al menú</a>
 
@@ -22,28 +23,37 @@
 
   <h2 id="ingredientes">Ingredientes</h2>
   <ul>
-    <li>Lechuga <img src="img/lechuga.jpg" width="120"></li>
-    <li>Tomate <img src="img/tomate.jpg" width="120"></li>
-    <li>Aceite y sal <img src="img/aceite_y_sal.jpg" width="120"></li>
+    <li>Lechuga
+      <img src="img/lechuga.jpg" width="120" alt="Hojas de lechuga lavadas en un plato">
+    </li>
+    <li>Tomate
+      <img src="img/tomate.jpg" width="120" alt="Tomate entero y rodajas de tomate">
+    </li>
+    <li>Aceite y sal
+      <img src="img/aceite_y_sal.jpg" width="120" alt="Botella de aceite y salero">
+    </li>
   </ul>
   <hr>
 
   <h2 id="pasos">Paso a paso</h2>
   <ol>
-    <li>Lava la <b>lechuga</b> y ponla en un bol.<br>
-      <img src="img/paso1ensalada.jpg" width="200" alt="Lechuga lavada y en el plato">
+    <li>
+      Lava la <b>lechuga</b> y ponla en un bol.<br>
+      <img src="img/paso1ensalada.jpg" width="200" alt="Lechuga lavada en un bol lista para preparar">
     </li>
-    <li>Corta el <b>tomate</b> en trozos y añádelo encima.<br>
-      <img src="img/paso2ensalada.jpg" width="200" alt="Tomate cortado">
+    <li>
+      Corta el <b>tomate</b> en trozos y añádelo encima.<br>
+      <img src="img/paso2ensalada.jpg" width="200" alt="Tomate cortado en trozos sobre la tabla de cortar">
     </li>
-    <li>Añade un poco de <b>aceite y sal</b> al gusto.<br>
-      <img src="img/paso3ensalada.jpg" width="200" alt="Añadiendo aceite y sal">
+    <li>
+      Añade un poco de <b>aceite y sal</b> al gusto.<br>
+      <img src="img/paso3ensalada.jpg" width="200" alt="Mano vertiendo aceite sobre la ensalada y espolvoreando sal">
     </li>
   </ol>
   <hr>
 
   <h2 id="final">Resultado final</h2>
-  <img src="img/resultado_final_ensalada.jpg" width="400" alt="Resultado final de la ensalada">
+  <img src="img/resultado_final_ensalada.jpg" width="400" alt="Plato con la ensalada terminada, lechuga y tomate">
   <p><a href="#top">Volver arriba</a></p>
 
 </body>
